tests/algorithms/x/C/graphs/boruvka.error
compile: exit status 1
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c: In function ‘find_component’:
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c:137:76: error: ‘Graph’ has no member named ‘component_len’; did you mean ‘component’?
  137 |     if (g.component[(int)({long long _mochi_idx = node; _mochi_idx < 0 ? g.component_len + _mochi_idx : _mochi_idx;})] == node) {
      |                                                                            ^~~~~~~~~~~~~
      |                                                                            component
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c:140:97: error: ‘Graph’ has no member named ‘component_len’; did you mean ‘component’?
  140 |     return find_component(g, g.component[(int)({long long _mochi_idx = node; _mochi_idx < 0 ? g.component_len + _mochi_idx : _mochi_idx;})]);
      |                                                                                                 ^~~~~~~~~~~~~
      |                                                                                                 component
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c: In function ‘set_component’:
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c:144:76: error: ‘Graph’ has no member named ‘component_len’; did you mean ‘component’?
  144 |     if (g.component[(int)({long long _mochi_idx = node; _mochi_idx < 0 ? g.component_len + _mochi_idx : _mochi_idx;})] != node) {
      |                                                                            ^~~~~~~~~~~~~
      |                                                                            component
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c:149:24: error: ‘comp_keys’ undeclared (first use in this function); did you mean ‘comp_len’?
  149 |             map_set_ii(comp_keys, comp_vals, &comp_len, k, find_component(g, k));
      |                        ^~~~~~~~~
      |                        comp_len
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c:149:24: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c:149:35: error: ‘comp_vals’ undeclared (first use in this function)
  149 |             map_set_ii(comp_keys, comp_vals, &comp_len, k, find_component(g, k));
      |                                   ^~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c: In function ‘user_union’:
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c:163:20: error: ‘comp_keys’ undeclared (first use in this function); did you mean ‘comp_len’?
  163 |         map_set_ii(comp_keys, comp_vals, &comp_len, u, v);
      |                    ^~~~~~~~~
      |                    comp_len
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c:163:31: error: ‘comp_vals’ undeclared (first use in this function)
  163 |         map_set_ii(comp_keys, comp_vals, &comp_len, u, v);
      |                               ^~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c: In function ‘boruvka’:
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c:195:20: error: ‘comp_keys’ undeclared (first use in this function); did you mean ‘comp_len’?
  195 |         map_set_ii(comp_keys, comp_vals, &comp_len, i, i);
      |                    ^~~~~~~~~
      |                    comp_len
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c:195:31: error: ‘comp_vals’ undeclared (first use in this function)
  195 |         map_set_ii(comp_keys, comp_vals, &comp_len, i, i);
      |                               ^~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c:212:100: error: ‘Graph’ has no member named ‘component_len’; did you mean ‘component’?
  212 |                 long long u_comp = g.component[(int)({long long _mochi_idx = u; _mochi_idx < 0 ? g.component_len + _mochi_idx : _mochi_idx;})];
      |                                                                                                    ^~~~~~~~~~~~~
      |                                                                                                    component
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c:213:100: error: ‘Graph’ has no member named ‘component_len’; did you mean ‘component’?
  213 |                 long long v_comp = g.component[(int)({long long _mochi_idx = v; _mochi_idx < 0 ? g.component_len + _mochi_idx : _mochi_idx;})];
      |                                                                                                    ^~~~~~~~~~~~~
      |                                                                                                    component
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c:232:100: error: ‘Graph’ has no member named ‘component_len’; did you mean ‘component’?
  232 |                 long long u_comp = g.component[(int)({long long _mochi_idx = u; _mochi_idx < 0 ? g.component_len + _mochi_idx : _mochi_idx;})];
      |                                                                                                    ^~~~~~~~~~~~~
      |                                                                                                    component
/workspace/mochi/tests/algorithms/x/C/graphs/boruvka.c:233:100: error: ‘Graph’ has no member named ‘component_len’; did you mean ‘component’?
  233 |                 long long v_comp = g.component[(int)({long long _mochi_idx = v; _mochi_idx < 0 ? g.component_len + _mochi_idx : _mochi_idx;})];
      |                                                                                                    ^~~~~~~~~~~~~
      |                                                                                                    component
